tests/sumo/basic/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... 
done (1ms).
Loading additional-files from 'input_additional2.add.xml' ... done (2ms).
Loading done.
Simulation version v1_12_0+0452-f1c085e started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 0.24s
 Real time factor: 2100.84
 UPS: 108966.386555
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 67
 Waiting: 1
Statistics (avg):
 RouteLength: 363.28
 Speed: 7.60
 Duration: 61.97
 WaitingTime: 25.37
 TimeLoss: 42.95
 DepartDelay: 0.75

